garde/tests/ui/compile-fail/duplicate_rule.stderr
error: duplicate rule `ascii`
 --> tests/ui/compile-fail/duplicate_rule.rs
  |
  |     #[garde(ascii, ascii)]
  |                    ^^^^^
